[gd_scene load_steps=2 format=3 uid="uid://blbjkmy2exy74"]

[ext_resource type="Script" path="res://src/scripts/components/grab_component.gd" id="1_gy522"]

[node name="GrabComponent" type="Node3D"]
editor_description = "Allows player to grab some physical objects.
This node will use the player node directly from Global.current_game().player(), so it can be used from anywhere."
script = ExtResource("1_gy522")
grab_distance = 1.35
grabbed_collision_layer = 16
grabbed_collision_mask = 19

[node name="GrabRaycast" type="RayCast3D" parent="."]
editor_description = "Raycast to check what is ahead and is it grabbable"
enabled = false
collision_mask = 17

[node name="ObstacleRaycast" type="RayCast3D" parent="."]
editor_description = "Raycast to check what is ahead and is it grabbable"
enabled = false
